--- a/.github/workflows/pypi-upload.yml
+++ b/.github/workflows/pypi-upload.yml
@@ -58,7 +58,7 @@ jobs:
     environment:
       name: pypi
       # OPTIONAL: uncomment and update to include your PyPI project URL in the deployment status:
-      url: https://pypi.org/p/datespanlib
+      url: https://pypi.org/p/datespan
 
     steps:
       - name: Retrieve release distributions
