--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,5 +44,8 @@ Issues = "https://github.com/Zeutschler/datespan/issues"
 Changelog = "https://github.com/Zeutschler/datespan/CHANGELOG.md"
 pypi = "https://pypi.org/project/datespan/"
 
+[tool.setuptools]
+packages = ["datespan"]
+
 [tool.setuptools.dynamic]
 version = {attr = "datespan.__version__"}
